--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </button>
             <div class="content-wrapper">
               <div class="content grid">
-                <div class="chunk">
-                  <time>00:00</time>
+                <div class="chunk flex">
+                  <time class="flex">00:00</time>
                   <p>
                     <span>
                       Insira a URL 
